2022-01-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jxl.c: Added preliminary JPEG XL support written by
        Tobias Mark.  From Code Merge Request #14: "Added (basic) jpeg-xl
        support".  The writer is not working properly at this time.

        * www/formats.rst: Add HEIF to the list of supported formats.

        * README.txt: Expand the text regarding support for HEIF/HVEC
        support.

2022-01-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/heif.c: HEIF reader written by Tobias Mark.  From
        SourceForge Code Merge Request #15: "Added minimal heif support".

        * magick/blob.c (ReadBlobStream): Fix EOF logic similar to
        ReadBlob. Addresses oss-fuzz 43617
        "graphicsmagick:coder_P7_fuzzer: Use-of-uninitialized-value in
        WritePNMImage".

2022-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/blob.c (ReadBlob): Fix EOF logic. Addresses oss-fuzz
        43490 "graphicsmagick:coder_PNM_fuzzer: Use-of-uninitialized-value
        in SyncImageCallBack".

        * coders/pnm.c (ReadPNMImage): Make sure that we don't lose the
        image exception.

2022-01-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/blob.c: Throw a user-friendly exception when the read
        limit has been exceeded.

        * coders/jpeg.c: Add tracing and fallback for longjmp().

        * coders/pict.c (DecodeImage): Assure that the claimed scanline
        length is within the bounds of the scanline allocation to avoid
        possible heap overflow.

2022-01-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/blob.c: Make sure that read resource limiting can support
        very large files.

2022-01-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/resource.c: Add support for setting a read resource limit
        via the MAGICK_LIMIT_READ environment variable, or similar to
        '-limit read 5mb'.
