@@ -35,6 +35,7 @@ static const struct
     MODULEALIAS("APP1","META"),
     MODULEALIAS("APP1JPEG","META"),
     MODULEALIAS("ARW","DCRAW"),
+    MODULEALIAS("AVIF","HEIF"),
     MODULEALIAS("B","GRAY"),
     MODULEALIAS("BIE","JBIG"),
     MODULEALIAS("BIGTIFF","TIFF"),
@@ -72,9 +73,9 @@ static const struct
     MODULEALIAS("GRAYA","GRAY"),
     MODULEALIAS("GROUP4RAW","TIFF"),
     MODULEALIAS("H","LOGO"),
+    MODULEALIAS("HEIC","HEIF"),
     MODULEALIAS("HTM","HTML"),
     MODULEALIAS("HTTP","URL"),
-    MODULEALIAS("HEIC","HEIF"),
     MODULEALIAS("ICB","TGA"),
     MODULEALIAS("ICC","META"),
     MODULEALIAS("ICM","META"),
